=== ongoing ===

=== 1.1 ===

- Added confirmation email

=== 1.0 ===

- Updated requirements

=== 0.3.1 ===

- Improved email templates.

=== 0.3 ===

- Added optional content_object to e.g. report abuse.

=== 0.2 ===

- Added mobile styles

=== 0.1 ===

- Initial commit